--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             /* Hidden by default */
         }
 
+
+
         /* Film reel element */
         .reel-animation .reel {
             width: 100px;
@@ -181,6 +183,13 @@
             border-bottom: 1px solid #e0e0e0;
             position: relative;
             z-index: 2;
+        }
+
+        /* Logo styles */
+        header img.logo {
+            width: 160px;
+            height: 160px;
+            object-fit: contain;
         }
 
         nav {
@@ -273,8 +282,9 @@
             <div class="reel"></div>
         </div>
 
-        <!-- Header -->
+        <!-- Header with Logo -->
         <header class="fade-in">
+            <img src="Designer.png" alt="Logo" class="logo">
             <h1>Sophie Steele's Reels</h1>
         </header>
 
