--- a/public/about.html
+++ b/public/about.html
@@ -218,7 +218,7 @@
     </nav>
 <div class="container">
     <div class="about-content">
-        <h2>Welcome to the Dark Side of Cinema</h2>
+        <h2>Just a bit about me</h2>
         <p class="lead">Hiya, I am Sophie, and welcome to my review page. You may know me as a writer for the RRRAMBLE blog, but as they are currently on an indefinite hiatus I have taken things into my own hands. This page is going to be full of reviews and writeups from all the fun film adventures that I have. While I will focus mainly on reviews, keep an eye out for any festival writeups or special events I have attended and want to tell you all about. </p>
         <p>A bit of my background: I studied an undergraduate degree in London in Theatre and Film (back when I was an aspiring actress lol). After graduating and swiftly realising acting is not for me, I moved back to my hometown of Milton Keynes and spent a few years figuring out what I actually want to do with my life. Thanks to COVID I had plenty of time and soon realised my passion lies heavily in Film academia and theory, and absolutely not on either side of an actual camera. So I moved to Belfast to complete a Masters degree in Film Studies, and fell in love with this place and have now been permanently based here for 3 years. I have been writing reviews and other writeups as a hobby for nearly 4 years now, and have loved every minute of it, especially the film festivals I get to attend because of it. </p>
         <p>I am an absolute horror nut, my fave film is Scream, and I am a big fan of anything Halloweeny...but to be honest I just love films, so I will watch anything from any genre just as an excuse for a cinema trip. Hope you enjoy reading my opinions on things, and hopefully it inspires you in some way or another. </p>
