--- a/public/contact.html
+++ b/public/contact.html
@@ -134,7 +134,7 @@
     <div class="container">
         <div class="contact-box">
             <h2>Get in Touch</h2>
-            <a href="mailto:sophiesteele96@yahoo.com" class="icon-link">
+            <a href="mailto:sophiesteele96@yahoo.co.uk" class="icon-link">
                 <i class="fas fa-envelope"></i>
                 <!-- Email icon -->
             </a>
